--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, object {
   width: 100%;
   height: 100%;
   margin: 0;
@@ -11,9 +11,29 @@ html, body {
 
 #all {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .toHide {
   visibility: hidden;
+}
+
+.circle_content {
+  visibility: hidden;
+  display: none;
+  opacity: 0;
+}
+
+svg, object {
+  overflow: visible;
+  width: 100%;
+  height: auto;
+}
+
+.element {
+  cursor: pointer;
+}
+
+.text {
+  pointer-events: none;
 }
