--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,46 @@ html, body, object {
 }
 
 .circle_content {
-  visibility: hidden;
   display: none;
   opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.circle_content p.title {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 45%;
+  left: 2.5%;
+  text-align: center;
+  transform-origin: 50% 50%;
+  height: auto;
+  display: block;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.circle_content p.content {
+  position: relative;
+  transform-origin: 50% 50%;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 45%;
+  left: 50%;
+  height: auto;
+  display: block;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-align: center;
 }
 
 svg, object {
