--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ html, body, object {
 }
 
 .circle_content p.title {
-  position: relative;
+  position: absolute;
   top: 50%;
   transform: translateY(-50%);
   width: 45%;
@@ -43,10 +43,15 @@ html, body, object {
   padding-bottom: 0;
   margin-top: 0;
   margin-bottom: 0;
+  font-family: 'Arial';
+  font-weight: 400;
+  color: white;
+  opacity: 0.3;
+  font-size: 62px;
 }
 
 .circle_content p.content {
-  position: relative;
+  position: absolute;
   transform-origin: 50% 50%;
   top: 50%;
   transform: translateY(-50%);
@@ -59,6 +64,10 @@ html, body, object {
   margin-top: 0;
   margin-bottom: 0;
   text-align: center;
+  font-family: 'Arial';
+  font-weight: 200;
+  color: white;
+  font-size: 22px;
 }
 
 svg, object {
