--- a/styles.css
+++ b/styles.css
@@ -186,3 +186,12 @@ svg, object {
   position: absolute;
   z-index: 10;
 }
+
+.circle_content.academics p {
+  color: black;
+  opacity: 0.5;
+}
+
+#bg_obj {
+  cursor: pointer;
+}
