--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ html, body, object {
   top: 0;
   width: 100%;
   height: 100%;
-  /*pointer-events: none;*/
+  pointer-events: none;
   z-index: 2;
 }
 
@@ -181,7 +181,7 @@ svg, object {
 }
 
 .text {
-  /*pointer-events: none;*/
+  pointer-events: none;
 }
 
 #nino {
@@ -204,6 +204,7 @@ a.btn{
   color: white;
   font-size: 2rem;
   z-index: 999;
+  display: none;
 }
 a.btn.prev{
   left: 47%;
